SERVER-71590 Move write_ops dassert to invariant [Coverity]